<resources>
    <string name="app_name">testApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="lbl_name">Имя</string>
    <string name="lbl_email">email</string>
    <string name="lbl_username">логин</string>
    <string name="lbl_phone">телефон</string>
    <string name="lbl_cell">cell</string>
</resources>
